# MultiAgentSYM

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  PHASE2_COMPLETE.md  README.md  goal.md  main.py  package-lock.json  package.json  pyproject.toml  test_setup.py
agents/: __init__.py
agents/customer_service/: __init__.py
agents/events/: __init__.py  bus.py  event_types.py
agents/pricing/: __init__.py
api/: __init__.py
config/: __init__.py  mongodb.py  settings.py
core/: __init__.py  exceptions.py
server/ecommerce/: package-lock.json
server/ecommerce/routes/: users.js
server/ecommerce/seed/: emoji-seed.js
src/ServerRequest/: index.js
src/axios/: API.js
src/components/LoginRegisterModal/: LoginForm.js  RegisterForm.js
src/components/MobileMenu/: index.js
src/components/Products/: BestSeller.js  NewArrivals.js  SingleProduct.js
src/components/TopNavBar/: index.js
src/redux/actions/: cartAction.js  productAction.js
src/redux/reducers/: DepartmentReducer.js  cartReducer.js  productReducer.js
src/views/Category/: Category.js
src/views/Product/: SingleProduct.js
tools/: __init__.py  api_client.py  cart_tools.py  catalog_tools.py  user_tools.py
